[package]
name = "iron_diesel_middleware"
version = "0.4.0"
authors = ["Darayus Nanavati <darayus.contact@gmail.com>"]

[dependencies]

iron = "0.6"
diesel = ">= 0.16"
r2d2 = ">= 0.7"
r2d2-diesel = ">= 0.16"

[[example]]
name = "basic"

[dev_dependencies]
diesel = { version = ">= 0.16", features = ["postgres"] }
