[package]
name = "iron_diesel_middleware"
version = "0.4.0"
authors = ["Darayus Nanavati <darayus.contact@gmail.com>"]

[dependencies]

iron = "0.6"
diesel = ">=1.0"
r2d2 = ">=0.7, <0.9"
r2d2-diesel = "1.0"

[[example]]

name = "basic"

[dev_dependencies]
diesel = { version = ">=1.0", features = ["postgres"] }
